feat: add bearer token
